--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pamudi Silva
-#logo: /assets/img/headshot_circle.png
+logo: WhatsApp Image 2023-08-20 at 21.34.34.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
